[package]
name = "rs-dashmate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
requestty = "0.3.0"
spinners = "4.0.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
